[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Animation/AnimationTreePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Player/aim.png" type="Texture" id=5]
[ext_resource path="res://Player/Controlls.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32.139, 57.1739 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 11
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
bullet_template = ExtResource( 2 )
movement_speed = 200
aim_speed = 2
bullet_speed = 8
max_health = 3
dodge_multiplier = 6.0
dodge_up_time = 0.25

[node name="Animationen" parent="." index="0" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -46.7705 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Test" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 4 )

[node name="Aim" type="Sprite" parent="." index="3"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="throw_point" type="Position2D" parent="Aim" index="0"]

position = Vector2( 150, 0 )
_sections_unfolded = [ "Transform" ]

[node name="DodgeTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="Controlls" parent="." index="5" instance=ExtResource( 6 )]

[node name="ThrowTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AinimationTween" type="Tween" parent="." index="7"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="DodgeTimer" to="." method="_on_DodgeTimer_timeout"]

[connection signal="timeout" from="DodgeTimer" to="Controlls" method="_on_DodgeTimer_timeout"]


